[Ruchita]Add:Custom Anlyse exception

--- a/MoodAnalyserDemo/MoodAnalyserDemo/MoodAnalyserDemo.csproj
+++ b/MoodAnalyserDemo/MoodAnalyserDemo/MoodAnalyserDemo.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MoodAnalyse.cs" />
+    <Compile Include="MoodAnalyseCustom_Exception.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
